[package]
name = "newsapi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.163", features = ["derive"] }
ureq = { version = "2.6.2", features = ["json"] }
serde_json = "1.0.96"
thiserror = "1.0.40"
url = "2.3.1"
reqwest = { version = "0.11.17", features = ["json"], optional = true }

[features]
async = ["reqwest"]
